[gd_scene load_steps=5 format=2]

[ext_resource path="res://Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/NumberScroll.gd" type="Script" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=7]
size = 60
use_filter = true
font_data = ExtResource( 1 )

[node name="NumberScroll" type="VScrollBar"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
size_flags_horizontal = 3
theme = ExtResource( 3 )
max_value = 23.0
page = 3.0
rounded = true
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="PrevNumber" type="Label" parent="VBoxContainer"]
margin_top = 1059.0
margin_right = 1080.0
margin_bottom = 1130.0
custom_colors/font_color = Color( 1, 1, 1, 0.482353 )
custom_fonts/font = SubResource( 7 )
text = "10"
align = 1
valign = 1

[node name="Number" type="Label" parent="VBoxContainer"]
margin_top = 1134.0
margin_right = 1080.0
margin_bottom = 1205.0
custom_fonts/font = SubResource( 7 )
text = "10"
align = 1
valign = 1

[node name="NextNumber" type="Label" parent="VBoxContainer"]
margin_top = 1209.0
margin_right = 1080.0
margin_bottom = 1280.0
custom_colors/font_color = Color( 1, 1, 1, 0.498039 )
custom_fonts/font = SubResource( 7 )
text = "10"
align = 1
valign = 1

[connection signal="value_changed" from="." to="." method="_on_NumberScroll_value_changed"]
